fixed container justify and align

--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,14 @@ body {
 .container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   gap: 3.5em;
 
   height: 70vh;
   width: 97vw;
 
   padding: 20px;
-
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
